--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
-
+<link rel="stylesheet" href="bootstrap.css" type="text/css">
 	<style>
 
 	</style>
   </head>
   <body>
     <div>
-      <button id="btnInit" >Monitor my location</button>
-      <button id="btnStop" >Stop monitoring</button>
+      <button id="btnInit" class="btn btn-primary">Monitor my location</button>
+      <button id="btnStop" class="btn btn-warning">Stop monitoring</button>
     </div>
     <div id="info"></div>
 	   <div id="map-canvas"></div>
