--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE HTML>
 
 <html>
@@ -186,6 +187,204 @@
   </body>
 </html>
 
+-->
+
+
+<!DOCTYPE HTML>
+
+<html>
+  <head>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
+<link rel="stylesheet" href="bootstrap.css" type="text/css">
+	<style>
+		.mar {
+			margin:10px 0px 0px 10px;
+		}
+		.mar1 {
+			margin:0px 0px 0px 0px;
+		}
+	</style>
+  </head>
+  <body>
+    <div>
+      <button id="btnInit" class="btn btn-primary mar">Monitor my location</button>
+      <button id="btnStop" class="btn btn-warning mar">Stop monitoring</button>
+    </div>
+    <div id="info" class="mar1"></div>
+	<div id="in" class="mar"></div>
+	   <div id="map-canvas" class="mar"></div>
+	<div id="infomap" class="mar"></div>
+	
+    <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
+   <script type="text/javascript">
+        $(document).ready(function(){
+
+            $("#btnInit").click(initiate_watchlocation)
+            $("#btnStop").click(stop_watchlocation)
+			initialize();
+			  var geocoder;
+
+			  if (navigator.geolocation) {
+				navigator.geolocation.getCurrentPosition(successFunction, errorFunction);
+			} 
+        });
+
+		var newAddress = null;
+
+        var watchProcess = null;
+		function initiate_watchlocation() {
+			if (watchProcess == null) {
+				watchProcess = navigator.geolocation.watchPosition(handle_geolocation_query, handle_errors);
+			}
+		}
+		function stop_watchlocation() {
+			if (watchProcess != null)
+			{
+				navigator.geolocation.clearWatch(watchProcess);
+				watchProcess = null;
+			}
+		}
+        function handle_errors(error)
+        {
+            switch(error.code)
+            {
+                case error.PERMISSION_DENIED: alert("user did not share geolocation data");
+                break;
+                case error.POSITION_UNAVAILABLE: alert("could not detect current position");
+                break;
+                case error.TIMEOUT: alert("retrieving position timedout");
+                break;
+                default: alert("unknown error");
+                break;
+            }
+        }
+
+
+		function handle_geolocation_query(position) {
+						var lat = position.coords.latitude;
+				var lng = position.coords.longitude;
+				//var latlng = new google.maps.LatLng(13.75,100.517);
+				var latlng = new google.maps.LatLng(lat,lng);
+				geocoder.geocode({'latLng': latlng}, function(results, status) {
+				  if (status == google.maps.GeocoderStatus.OK) {
+				   newAddress = results[0].formatted_address;
+				 //  var lines = newAddress.split(' ');
+					var lines = new Array(results[0].address_components.length);
+					var total_line = "";
+				   for(var xx=0; xx<results[0].address_components.length; xx++)
+				   {
+					var xy= results[0].address_components.length / 3;
+				   lines[xx] = results[0].address_components[xx].long_name;
+				 //  console.log(lines[xx]);
+				 //  console.log(results[0].address_components.length);
+				  // console.log(xy);
+					//if(xx<xy)
+					//total_line = lines[xx] + " " ;
+				   }
+
+				 // console.log(results[0].formatted_address)
+				//  console.log(newAddress)
+					if (results[1]) {
+					 //formatted address
+					// alert(results[0].formatted_address)
+					//find country name
+						 for (var i=0; i<results[0].address_components.length; i++) {
+						for (var b=0;b<results[0].address_components[i].types.length;b++) {
+
+						//there are different types that might hold a city admin_area_lvl_1 usually does in come cases looking for sublocality type will be more appropriate
+							if (results[0].address_components[i].types[b] == "administrative_area_level_1") {
+								//this is the object you are looking for
+								city= results[0].address_components[i];
+								break;
+							}
+						}
+					}
+					//city data
+					//alert(city.short_name + " " + city.long_name)
+					//alert(city.short_name )
+
+
+
+					} else {
+					  alert("No results found");
+					}
+				  } else {
+					alert("Geocoder failed due to: " + status);
+				  }
+
+					results[0].address_components.length;
+												
+										var text = "<br><table border=2 class='table table-hover'><tr><td>Latitude: "  + position.coords.latitude  + "</td></tr>" +
+							   "<tr><td>Longitude: " + position.coords.longitude + "</td></tr>" +
+							   "<tr><td>Accuracy: "  + position.coords.accuracy  + "m</td></tr>" +
+							   "<tr><td>Time: " + new Date(position.timestamp)
+								+ "</td></tr>" + "<tr><td>Location: " +newAddress +
+								"</td></tr></table>";
+			$("#info").html(text);
+			$("#in").html("Monitor Map");
+			$("#infomap").html("<br>Start Map");
+
+
+				});	
+				console.log(newAddress)
+
+			var image_url = "http://maps.google.com/maps/api/staticmap?sensor=true&center=" + position.coords.latitude + ',' + position.coords.longitude +
+							"&zoom=14&size=280x400&markers=color:blue|label:S|" + position.coords.latitude + ',' + position.coords.longitude;
+			$("#map").remove();
+			$(document.body).append(
+				$(document.createElement("img")).attr("src", image_url).attr('id','map').attr('class','mar')
+			
+			);
+
+
+					$("#map-canvas").css("display", "block");
+					$("#map-canvas").css("height", "400px");
+					$("#map-canvas").css("width","280px");
+
+
+			  var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+			  var mapOptions = {
+								  zoom: 14,
+								  center: latlng,
+								  mapTypeId: google.maps.MapTypeId.ROADMAP
+							  };
+			  var maps = new google.maps.Map(
+							   document.getElementById('map-canvas'),
+							   mapOptions
+						 );			
+			var marker = new google.maps.Marker({
+								position: latlng,
+								map: maps,
+								animation: google.maps.Animation.DROP,
+								title: "Welcome to Thailand"
+							});
+
+		}
+
+			function successFunction(position) {
+				// alert("666");
+				var lat = position.coords.latitude;
+				var lng = position.coords.longitude;
+				//codeLatLng(lat, lng)
+
+			}
+
+			function errorFunction(){
+				alert("Geocoder failed");
+			}
+
+			  function initialize() {
+				//alert("555");
+				geocoder = new google.maps.Geocoder();
+
+
+
+			  }
+   </script>
+  </body>
+</html>
 
 
 
