--- a/index.html
+++ b/index.html
@@ -665,21 +665,21 @@
 			box-shadow: rgb(195, 195, 195) 0px 1px 2px 0px;
 			padding: 15px;
 			margin: 10px 0px 0px 0px;
-			width:270px;
+			width:280px;
 			font-size:14px; 
 		}
 		.btnli
 		{
 			position: absolute;
-			left:235px;
+			left:240px;
 			margin-bottom:20px;
 		}	
 	</style>
   </head>
   <body>
     <div>
-      <button id="btnInit" class="btn btn-primary mar" value="start">Monitor my location</button>
-      <button id="btnStop" class="btn btn-warning mar" value="stop">Stop monitoring</button>
+      <button id="btnInit" class="btn btn-primary mar" value="start" style="center">Picking Your Location</button>
+     
     </div>
 	<div id="count" align="center"></div>
 			<div id="ul" align="left">
@@ -840,7 +840,7 @@
 								"</td></tr></table>";
 			$("#info").html(text);
 			$("#in").html("Monitor Map");
-			$("#infomap").html("<br>Start Map");
+			$("#infomap").html("<br>Map Image");
 			//$("#count").text(newAddress);
 			//$("#count").text(newAddress).attr('value',newAddress);
 
