--- a/index.html
+++ b/index.html
@@ -660,25 +660,30 @@
 		.mar1 {
 			margin:0px 0px 0px 0px;
 		}
+		
+		.mar2 {
+			
+			margin:0px 0px 0px 20px;
+		}
 		.list {
 			display: block;
 			box-shadow: rgb(195, 195, 195) 0px 1px 2px 0px;
 			padding: 15px;
-			margin: 10px 0px 0px 0px;
+			margin: 10px 0px 0px 2px;
 			width:280px;
 			font-size:14px; 
 		}
 		.btnli
 		{
 			position: absolute;
-			left:240px;
+			left:242px;
 			margin-bottom:20px;
 		}	
 	</style>
   </head>
   <body>
-    <div>
-      <button id="btnInit" class="btn btn-primary mar" value="start" style="center">Picking Your Location</button>
+    <div align="center">
+      <button id="btnInit" class="btn btn-primary mar" value="start" >Picking Your Location</button>
      
     </div>
 	<div id="count" align="center"></div>
