--- a/index.html
+++ b/index.html
@@ -669,14 +669,14 @@
 			display: block;
 			box-shadow: rgb(195, 195, 195) 0px 1px 2px 0px;
 			padding: 15px;
-			margin: 10px 0px 0px 2px;
+			margin: 10px 0px 0px 0px;
 			width:280px;
 			font-size:14px; 
 		}
 		.btnli
 		{
 			position: absolute;
-			left:242px;
+			left:247px;
 			margin-bottom:20px;
 		}	
 	</style>
@@ -687,7 +687,7 @@
      
     </div>
 	<div id="count" align="center"></div>
-			<div id="ul" align="left">
+			<div id="ul" align="center">
 			
 			</div>
 			
